--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h2>Professional Experience</h2>
             <div class="job">
                 <h3>Java Architect</h3>
-                <p>Wipro, Dallas, TX | 01/2023 – Present</p>
+                <p>American Express, Dallas, TX | 01/2023 – Present</p>
                 <ul>
                     <li>Led the modernization of an ERP system, focusing on backend development using Java, Spring Boot, and Hibernate, while also contributing to frontend development using ReactJS and JavaScript.</li>
                     <li>Implemented and optimized microservices architecture, improving system scalability and maintainability.</li>
@@ -61,7 +61,7 @@
             </div>
             <div class="job">
                 <h3>Java Developer</h3>
-                <p>Genpact, Hyderabad, India | 08/2019 – 08/2021</p>
+                <p>Qualcomm, Hyderabad, India | 08/2019 – 08/2021</p>
                 <ul>
                     <li>Developed and maintained Java microservices, focusing on backend development while also contributing to frontend development using ReactJS and JavaScript.</li>
                     <li>Implemented RESTful APIs using Spring Boot and Hibernate, facilitating seamless integration between services.</li>
